fixed spacing of Welcome to our site

--- a/04week/welcome-to-our-site/css/style.css
+++ b/04week/welcome-to-our-site/css/style.css
@@ -91,10 +91,6 @@ main {
     align-items: center;
   }
 
-  .info-box {
-    /*flex-direction: column;*/
-  }
-
   .info-box h1, .info-box p {
     color: black;
   }
